# email-assassin

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: rust.yml
src/: app.rs  bridge.rs  error.rs  main.rs  state.rs
src/imap/: deleter.rs  mod.rs  provider.rs  scanner.rs
src/ui/: dashboard.rs  donut.rs  mod.rs  sidebar.rs
