[package]
name = "email-assassin"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-imap = "0.10"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
regex = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
