[package]
name = "email-assassin"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-imap = "0.10"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-channel = "2.5.0"
mimalloc = "0.1"

[lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
# Opt out of some pedantic lints that are too noisy for this app
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
