[project]
name = "email-assassin"
version = "0.1.0"
description = "Inbox cleanup tool with Streamlit UI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "imap-tools>=1.5.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
